--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "ECAP+ PMP",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "icon_16x16.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "icon_192x192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "logo512.png",
+      "src": "icon_512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
