All modified files with a few changes implemented in them

--- a/package.json
+++ b/package.json
@@ -12,30 +12,41 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "@craco/craco": "^6.1.2",
+    "@craco/craco": "^7.1.0",
     "@lit-labs/react": "^1.0.2",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@superset-ui/embedded-sdk": "^0.1.2",
-    "antd": "^4.22.4",
+    "antd": "^5.26.6",
     "antd-mask-input": "^2.0.7",
-    "axios": "^0.24.0",
+    "axios": "^1.11.0",
     "axios-mock-adapter": "^1.20.0",
+    "buffer": "^6.0.3",
     "country-list": "^2.2.0",
+    "craco-less": "^3.0.1",
     "credit-card-type": "^9.1.0",
+    "crypto-browserify": "^3.12.1",
     "dayjs": "^1.11.0",
     "echarts": "^5.1.2",
     "echarts-for-react": "^3.0.1",
     "elt-react-credit-cards": "^0.0.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "i18next": "^20.4.0",
     "jquery": "^3.6.0",
     "json2csv": "^6.0.0-alpha.2",
-    "jspdf": "^2.5.2",
-    "jspdf-autotable": "^3.8.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "jszip": "^3.10.1",
     "leaflet": "^1.7.1",
+    "moment": "^2.30.1",
+    "os-browserify": "^0.3.0",
     "papaparse": "^5.4.1",
+    "path-browserify": "^1.0.1",
     "pigeon-maps": "^0.19.7",
+    "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
@@ -53,19 +64,21 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.0.2",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.3",
-    "react-simple-maps": "^2.3.0",
+    "react-scripts": "5.0.1",
+    "react-simple-maps": "^1.0.0",
     "react-slick": "^0.28.1",
     "react-verification-input": "^2.0.3",
     "round-slider": "altence/round-slider#refactor/slider",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.0",
     "typeface-lato": "^1.1.13",
     "typeface-montserrat": "^1.1.13",
     "typescript": "^4.1.2",
+    "util": "^0.12.5",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
-    "webpack": "^4.46.0",
+    "webpack": "^5.100.2",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
     "workbox-cacheable-response": "^5.1.3",
@@ -86,16 +99,18 @@
     "eject": "craco eject",
     "lint": "eslint \"*/**/*.{js,ts,tsx}\" --fix",
     "lint:styles": "stylelint '*/**/*.{js,ts,tsx}'",
-    "prepare": "husky install",
+    "prepare": "husktall",
     "buildThemes": "lessc --js --clean-css=\"--s1 --advanced\" src/styles/themes/main.less public/themes/main.css"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not op_mini all",
-    "not IE 11"
+    "last 2 versions"
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@types/country-list": "^2.1.0",
     "@types/leaflet": "^1.7.9",
     "@types/react": "^18.0.28",
@@ -108,25 +123,32 @@
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.10",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "craco-alias": "^3.0.1",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint": "8",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-visitor-keys": "latest",
     "husky": "^6.0.0",
-    "less": "^4.1.2",
+    "less": "^4.4.0",
+    "less-loader": "^12.3.0",
     "less-plugin-clean-css": "^1.5.1",
     "lint-staged": "^11.0.0",
     "prettier": "^3.4.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
+    "stylelint": "^16.22.0",
+    "stylelint-config-recommended": "^16.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
+    "stylelint-processor-styled-components": "^1.0.0",
+    "typescript-eslint": "^8.38.0",
+    "update-browserslist-db": "^1.1.3",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpackbar": "^5.0.0-3"
+    "webpack-cli": "^6.0.1",
+    "webpackbar": "^5.0.0",
+    "yarn-deduplicate": "^6.0.2"
   },
   "lint-staged": {
     "*/**/*.{js,ts,tsx}": "yarn lint"
