--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_DIRECTUS_URL=https://api.achieve.bluecodeltd.com
 VITE_DQA_BASE_URL=https://server.dqa.bluecodeltd.com
+VITE_DIRECTUS_USER_ROLE=c1f65082-eb9d-4a54-b80d-f719627f007e
