Add weekly extracts generation

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "setup:weekly-flow": "node --env-file=.env scripts/setup-weekly-extract-flow.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
